--- a/base/resources/assets/sass/base/global/_variables.scss
+++ b/base/resources/assets/sass/base/global/_variables.scss
@@ -38,7 +38,7 @@ $primary-link-color: #65a0d0 !default;
 
 $general-border-radius: 4px !default;
 
-$dropdown-shadow: 5px 5px rgba(#666, 0.1);
+$dropdown-shadow: none;
 $icon-size-normal: 14px !default;
 $brand-default: lighten(#b7c0ce, 1%) !default;
 $general-panel-bg-color: #f1f4f7 !default;
