--- a/base/resources/assets/sass/base/global/components/_card.scss
+++ b/base/resources/assets/sass/base/global/components/_card.scss
@@ -2,8 +2,7 @@
 
 .mt-element-card {
     .mt-card-item {
-        border: 1px solid;
-        border-color: $general-panel-border-color;
+        background-color: white;
         position: relative;
         margin-bottom: 30px;
 
