--- a/base/resources/assets/sass/base/global/components/_portlets.scss
+++ b/base/resources/assets/sass/base/global/components/_portlets.scss
@@ -55,7 +55,7 @@ Portlets
             display: inline-block;
             font-size: 18px;
             line-height: 18px;
-            padding: 10px 0;
+            padding: 15px 0;
 
             &.bold {
                 font-weight: 400;
@@ -414,7 +414,10 @@ Portlets
 
         > .caption {
             color: #666666;
-            padding: 10px 0;
+
+            .btn {
+                border: 1px solid white;
+            }
 
             > .caption-subject {
                 font-size: 16px;
