--- a/base/resources/assets/sass/custom/_layout.scss
+++ b/base/resources/assets/sass/custom/_layout.scss
@@ -36,7 +36,7 @@
     &.form-actions-fixed-top {
         position: fixed;
         top: 0;
-        left: 235px;
+        left: 0;
         right: 0;
         z-index: 999;
         background-color: #ffffff;
@@ -44,6 +44,10 @@
         box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.5);
         text-align: right;
         padding: 5px 20px;
+
+        &.sidebar {
+            left: 235px;
+        }
 
         .btn {
             margin-left: 5px;
